import javax.net.ssl.HttpsURLConnection
import java.nio.file.Files

import java.time.ZonedDateTime
import java.time.format.DateTimeFormatter
import java.time.ZoneOffset

plugins {
	id 'fabric-loom' version '1.15-SNAPSHOT'
	id 'maven-publish'
	id "io.freefair.lombok" version "8.10"
	id "com.diffplug.spotless" version "7.2.1"
}

java {
	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

// read version from env if provided by CI
def envModVersion = System.getenv('MOD_VERSION')?.trim()

// single UTC timestamp (safe for Maven repos; use '-' not '+')
def ts = ZonedDateTime.now(ZoneOffset.UTC).format(DateTimeFormatter.ofPattern('yyyyMMdd-HHmm'))

def modVersion = envModVersion ?: ts

base {
	archivesName = project.archives_base_name
}
version = "${project.minecraft_version}-${project.mod_version}"
group = project.maven_group

repositories {
	mavenLocal()
	mavenCentral()
	maven { url 'https://masa.dy.fi/maven' }
	maven { url 'https://maven.fallenbreath.me/releases' }
	maven { url 'https://jitpack.io' }
}

dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
	modImplementation("com.github.sakura-ryoko:malilib:${project.minecraft_version}-${project.malilib_version}")
	modImplementation "com.arematics:advancedchatcore:${project.minecraft_version}-${project.advancedchat_version}"
}


processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": project.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.encoding = "UTF-8"
	it.options.release = 21
}

// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
// if it is present.
// If you remove this task, sources will not be generated.
tasks.register('sourcesJar', Jar) {
	dependsOn classes
	archiveClassifier.set('sources')
	from sourceSets.main.allSource
}

jar {
	from "LICENSE.txt"
}

spotless {
	ratchetFrom 'origin/main'
	format 'misc', {
		// define the files to apply `misc` to
		target '*.gradle', '*.md', '.gitignore'

		// define the steps to apply to those files
		trimTrailingWhitespace()
		indentWithTabs() // or spaces. Takes an integer argument if you don't like 4
		endWithNewline()
	}
	java {
		target 'src/*/java/**/*.java'
		licenseHeaderFile "HEADER.txt"
	}
}
